--- a/index.html
+++ b/index.html
@@ -4,221 +4,283 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>沐林&沐靈美學工作室 - 預約表單</title>
-
-    <!-- 載入 Tailwind CDN 以使用其類別 (CSS 會被內嵌) -->
-    <script src="https://cdn.tailwindcss.com"></script>
-
+    
+    <!-- 此版本所有樣式皆已內嵌 CSS，確保排版穩定 -->
+    
     <style>
-        /* 載入 Noto Serif TC (思源宋體)，提供優雅的明體/宋體感覺 */
+        /* 載入 Noto Serif TC (思源宋體) */
         @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;600;700&family=Inter:wght@400;600;700&display=swap');
 
-        /* 設定主要字體為 Noto Serif TC (優雅的明體/宋體風格) */
+        /* 全局基礎設定 - 參考五行金水 (白/藍/灰) */
+        :root {
+            --color-primary: #0d47a1; /* 深藍色 (水) */
+            --color-secondary: #1565c0; /* 中藍色 (水) */
+            --color-background-light: #F5F7FA; /* 淺白/灰 (金) */
+            --color-background-dark: #E0F7FA; /* 淺藍 (水) */
+            --color-text: #333;
+            --color-border: #b3e5fc;
+            --color-warning: #854d0e;
+        }
+
         body {
-            /* 柔和淺藍底色，符合您「金」與「水」的五行設計：純白 (F5F7FA) 到淺藍 (E0F7FA) */
-            background: linear-gradient(to bottom, #F5F7FA, #E0F7FA); 
+            /* 柔和淺藍到淺白漸變背景 */
+            background: linear-gradient(to bottom, var(--color-background-light), var(--color-background-dark)); 
             background-attachment: fixed; 
             font-family: 'Noto Serif TC', 'Inter', sans-serif; 
-            color: #333; /* 深灰文字，符合「水」的元素 */
+            color: var(--color-text); 
+            min-height: 100vh;
+            padding: 1rem;
         }
         
+        /* 響應式佈局：容器居中，最大寬度 */
         .container-card {
-            /* 圓角和陰影，提升質感 */
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            border: 1px solid #e0f7fa; /* 淺藍邊框 */
+            max-width: 960px; /* max-w-4xl */
+            margin-left: auto;
+            margin-right: auto;
+            padding: 1.5rem; /* p-6 for mobile */
+            background-color: white; 
+            border-radius: 0.75rem; /* rounded-xl */
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); 
+            border: 1px solid var(--color-background-dark);
+        }
+
+        @media (min-width: 768px) {
+            .container-card {
+                padding: 2.5rem; /* p-10 for desktop */
+            }
+        }
+
+        /* 標題區塊 */
+        .header {
+            text-align: center;
+            margin-bottom: 2.5rem; /* mb-10 */
         }
         
-        /* 標題樣式優化 */
         .title {
-            color: #1f2937; /* 深色文字，增加專業感 */
-            letter-spacing: 0.05em; /* 字距微調 */
+            color: #1f2937; 
+            font-size: 2rem; /* text-3xl */
+            font-weight: 700;
+            margin-bottom: 0.5rem; 
+            letter-spacing: 0.05em; 
+        }
+
+        @media (min-width: 768px) {
+            .title {
+                font-size: 2.25rem; /* md:text-4xl */
+            }
+        }
+
+        /* 項目選擇區塊 */
+        .selector-section {
+            margin-bottom: 2.5rem;
+            padding: 1rem;
+            border: 1px solid #b3e5fc; 
+            border-radius: 0.5rem; 
+        }
+
+        .selector-title {
+            font-size: 1.25rem; /* text-xl */
+            font-weight: 600;
+            margin-bottom: 1.5rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 1px solid #e5e7eb;
+        }
+
+        @media (min-width: 768px) {
+            .selector-title {
+                font-size: 1.5rem; /* md:text-2xl */
+            }
         }
         
-        /* 輸入框樣式優化 */
-        input[type="text"], textarea {
-            border: 1px solid #b3e5fc; /* 淺藍色邊框 */
-            transition: all 0.3s ease;
+        .mode-selector {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            justify-content: center;
         }
 
-        /* 輸入框聚焦時的樣式 */
-        input[type="text"]:focus, textarea:focus {
-            outline: none;
-            border-color: #03a9f4; /* 亮藍色聚焦效果 */
-            box-shadow: 0 0 0 3px rgba(3, 169, 244, 0.2);
+        @media (min-width: 640px) {
+            .mode-selector {
+                flex-direction: row;
+            }
         }
-
-        /* 按鈕樣式 (深藍色/水元素) */
+        
+        /* 主要按鈕樣式 */
         .btn-primary {
-            background-color: #0d47a1; /* 深藍色 */
+            background-color: var(--color-primary); 
             color: white;
+            width: 100%;
+            padding: 0.75rem 1rem;
+            border-radius: 0.5rem;
+            font-size: 1.125rem;
+            font-weight: 600;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: background-color 0.3s ease;
+            cursor: pointer;
         }
 
         .btn-primary:hover {
-            background-color: #1565c0; /* 滑鼠經過時變亮藍色 */
+            background-color: var(--color-secondary);
+        }
+
+        /* 表單區塊 */
+        .form-section {
+            margin-top: 2rem;
+            padding: 1rem;
+            border: 1px solid #b3e5fc; 
+            border-radius: 0.5rem; 
+            background-color: #f9fafb; 
+        }
+
+        .input-group {
+            margin-bottom: 1rem;
+        }
+
+        .input-label {
+            display: block;
+            font-size: 0.875rem;
+            font-weight: 500;
+            color: #4b5563;
+            margin-bottom: 0.25rem;
+        }
+
+        input[type="text"], textarea {
+            width: 100%;
+            padding: 0.75rem;
+            border-radius: 0.5rem;
+            border: 1px solid var(--color-border);
+            transition: all 0.3s ease;
+        }
+
+        input[type="text"]:focus, textarea:focus {
+            outline: none;
+            border-color: #03a9f4;
+            box-shadow: 0 0 0 3px rgba(3, 169, 244, 0.2);
+        }
+
+        /* 訊息視窗樣式 */
+        .modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 50;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        .modal-content {
+            background-color: white;
+            padding: 1.5rem;
+            border-radius: 0.75rem;
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+            max-width: 90%;
+            width: 400px;
+            text-align: center;
+        }
+        
+        .hidden {
+            display: none !important;
         }
     </style>
 </head>
-<body class="min-h-screen p-4 md:p-8">
-    <!-- 外層容器：確保在手機上也能全寬顯示 -->
-    <div class="container-card max-w-4xl mx-auto p-6 md:p-10 bg-white rounded-xl shadow-lg">
+<body class="p-4 md:p-8">
+    
+    <div class="container-card">
 
         <!-- 標題區塊 -->
-        <header class="text-center mb-10">
-            <h1 class="title text-3xl md:text-4xl font-bold mb-2">沐林&沐靈美學工作室</h1>
-            <p class="text-xl md:text-2xl font-light text-gray-600">線上預約表單 (Appointment Form)</p>
+        <header class="header">
+            <h1 class="title">沐林&沐靈美學工作室</h1>
+            <p style="font-size: 1.25rem; font-weight: 300; color: #4b5563;">線上預約表單 (Appointment Form)</p>
         </header>
 
         <!-- 預約項目選擇區塊 -->
-        <section class="mb-10 p-4 border border-blue-100 rounded-lg">
-            <h2 class="text-xl md:text-2xl font-semibold mb-6 pb-2 border-b border-gray-200">請選擇預約項目</h2>
+        <section class="selector-section">
+            <h2 class="selector-title">請選擇預約項目</h2>
             
-            <div id="mode-selector" class="flex flex-col sm:flex-row gap-4 justify-center">
-                <!-- 熱蠟除毛按鈕 (深藍色，水元素) -->
+            <div id="mode-selector" class="mode-selector">
+                <!-- 熱蠟除毛按鈕 -->
                 <button 
                     onclick="selectMode('depilation')" 
-                    class="btn-primary w-full sm:w-1/2 py-3 rounded-lg text-lg font-medium shadow-md">
+                    class="btn-primary">
                     熱蠟除毛預約
                 </button>
                 
-                <!-- 美容項目按鈕 (深藍色，水元素) -->
+                <!-- 美學項目按鈕 -->
                 <button 
                     onclick="selectMode('beauty')" 
-                    class="btn-primary w-full sm:w-1/2 py-3 rounded-lg text-lg font-medium shadow-md">
+                    class="btn-primary">
                     美學項目預約
                 </button>
             </div>
             
-            <p id="mode-feedback" class="text-center mt-4 text-lg font-medium text-gray-700">請點擊上方按鈕選擇您的預約類型。</p>
+            <p id="mode-feedback" style="text-align: center; margin-top: 1rem; font-size: 1.125rem; font-weight: 500; color: #4b5563;">請點擊上方按鈕選擇您的預約類型。</p>
         </section>
 
         <!-- 預約資訊表格區塊 (預設隱藏) -->
-        <section id="appointment-form" class="mt-8 hidden p-4 border border-blue-200 rounded-lg bg-gray-50">
-            <h2 class="title text-2xl font-semibold mb-6 pb-2 border-b border-gray-300">預約請填寫以下表格</h2>
+        <section id="appointment-form" class="form-section hidden">
+            <h2 class="title" style="font-size: 1.5rem; margin-bottom: 1.5rem; border-bottom: 1px solid #d1d5db;">預約請填寫以下表格</h2>
             
             <form id="line-form" onsubmit="submitForm(event)">
                 
                 <!-- 姓名 -->
-                <div class="input-group mb-4">
-                    <label for="name" class="block text-sm font-medium text-gray-700 mb-1">姓名 Name</label>
-                    <input type="text" id="name" name="name" placeholder="請填寫您的姓名" required class="w-full p-3 rounded-lg focus:ring-2 focus:ring-blue-400">
+                <div class="input-group">
+                    <label for="name" class="input-label">姓名 Name</label>
+                    <input type="text" id="name" name="name" placeholder="請填寫您的姓名" required>
                 </div>
 
                 <!-- 電話 -->
-                <div class="input-group mb-4">
-                    <label for="phone" class="block text-sm font-medium text-gray-700 mb-1">電話 Phone</label>
-                    <input type="text" id="phone" name="phone" placeholder="09XX-XXX-XXX" required class="w-full p-3 rounded-lg focus:ring-2 focus:ring-blue-400">
+                <div class="input-group">
+                    <label for="phone" class="input-label">電話 Phone</label>
+                    <input type="text" id="phone" name="phone" placeholder="09XX-XXX-XXX" required>
                 </div>
 
                 <!-- 預約日期/時間 -->
-                <div class="input-group mb-4">
-                    <label for="date_time" class="block text-sm font-medium text-gray-700 mb-1">日期/時間 Date/Time (時段越多越好)</label>
-                    <textarea id="date_time" name="date_time" rows="3" placeholder="e.g. 1/15 (五) 14:00 或 15:30；1/16 (六) 早上" required class="w-full p-3 rounded-lg focus:ring-2 focus:ring-blue-400"></textarea>
+                <div class="input-group">
+                    <label for="date_time" class="input-label">日期/時間 Date/Time (時段越多越好)</label>
+                    <textarea id="date_time" name="date_time" rows="3" placeholder="e.g. 1/15 (五) 14:00 或 15:30；1/16 (六) 早上" required></textarea>
                 </div>
                 
                 <!-- 施作項目/部位 (根據模式切換內容) -->
-                <div id="service-input" class="input-group mb-4">
+                <div id="service-input" class="input-group">
                     <!-- JavaScript 會在這裡插入對應的欄位內容 -->
                 </div>
 
-                <!-- 是否為孕媽咪 (針對除毛/美容) -->
-                <div id="pregnancy-check" class="input-group mb-6 p-4 bg-yellow-50 border border-yellow-200 rounded-lg hidden">
-                    <div class="flex items-center">
-                        <input type="checkbox" id="is_pregnant" name="is_pregnant" class="h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500">
-                        <label for="is_pregnant" class="ml-2 block text-sm font-medium text-gray-800">
+                <!-- 是否為孕媽咪 -->
+                <div id="pregnancy-check" class="input-group hidden" style="padding: 1rem; background-color: #fffbe6; border: 1px solid #fde68a; border-radius: 0.5rem; margin-top: 1.5rem;">
+                    <div style="display: flex; align-items: center;">
+                        <input type="checkbox" id="is_pregnant" name="is_pregnant" style="height: 1rem; width: 1rem; color: var(--color-primary); border-radius: 0.25rem;">
+                        <label for="is_pregnant" style="margin-left: 0.5rem; font-size: 0.875rem; font-weight: 500; color: var(--color-warning);">
                             是否為孕媽咪？ (很重要，請如實告知)
                         </label>
                     </div>
                 </div>
 
                 <!-- 備註 -->
-                <div class="input-group mb-6">
-                    <label for="notes" class="block text-sm font-medium text-gray-700 mb-1">備註 Notes</label>
-                    <textarea id="notes" name="notes" rows="4" placeholder="e.g. 第一次除毛/其他皮膚狀況/疑問需求" class="w-full p-3 rounded-lg focus:ring-2 focus:ring-blue-400"></textarea>
+                <div class="input-group" style="margin-top: 1.5rem;">
+                    <label for="notes" class="input-label">備註 Notes</label>
+                    <textarea id="notes" name="notes" rows="4" placeholder="e.g. 第一次除毛/其他皮膚狀況/疑問需求" ></textarea>
                 </div>
 
                 <!-- 提交按鈕 -->
-                <button type="submit" id="submit-btn" class="btn-primary w-full py-3 rounded-lg text-xl font-semibold shadow-md hover:shadow-lg">
+                <button type="submit" id="submit-btn" class="btn-primary" style="margin-top: 1.5rem; font-size: 1.25rem; font-weight: 600;">
                     點此發送預約訊息至 Line
                 </button>
             </form>
         </section>
 
         <!-- 訊息彈出視窗 (用於替代 alert()) -->
-        <div id="message-modal" class="fixed inset-0 bg-black bg-opacity-50 z-50 flex justify-center items-center hidden">
-            <div class="bg-white p-6 rounded-xl shadow-2xl max-w-sm w-full text-center">
-                <h3 id="modal-title" class="text-xl font-bold mb-4 text-blue-600">訊息已發送</h3>
-                <p id="modal-content" class="mb-6 text-gray-700">請前往 Line 官方帳號查看。</p>
-                <button onclick="closeModal()" class="btn-primary py-2 px-4 rounded-lg font-medium">確定</button>
-            </div>
-        </div>
-
-    </div>
-
-    <script>
-        let currentMode = '';
-
-        // 設置不同模式下的輸入欄位內容
-        const serviceContents = {
-            depilation: `
-                <label for="service_depilation" class="block text-sm font-medium text-gray-700 mb-1">熱蠟除毛 - 施作部位</label>
-                <textarea id="service_depilation" name="service" rows="3" placeholder="e.g. 全腿、腋下、私密處 VIO (請註明有無做過)" required class="w-full p-3 rounded-lg focus:ring-2 focus:ring-blue-400"></textarea>
-            `,
-            beauty: `
-                <label for="service_beauty" class="block text-sm font-medium text-gray-700 mb-1">美學項目 - 施作項目/需求</label>
-                <textarea id="service_beauty" name="service" rows="3" placeholder="e.g. 臉部撥筋、有氧活罐、靈氣療癒、客製手鍊、泌乳諮詢" required class="w-full p-3 rounded-lg focus:ring-2 focus:ring-blue-400"></textarea>
-            `
-        };
-
-        const formSection = document.getElementById('appointment-form');
-        const serviceInputDiv = document.getElementById('service-input');
-        const modeFeedback = document.getElementById('mode-feedback');
-        const pregnancyCheck = document.getElementById('pregnancy-check');
-
-        // 選擇預約模式
-        function selectMode(mode) {
-            currentMode = mode;
-            formSection.classList.remove('hidden');
-            serviceInputDiv.innerHTML = serviceContents[mode];
-            modeFeedback.textContent = (mode === 'depilation') 
-                ? '您已選擇：熱蠟除毛預約。請填寫下方表格。'
-                : '您已選擇：美學項目預約。請填寫下方表格。';
-            
-            // 只有除毛/美容項目顯示孕媽咪確認框
-            if (mode === 'depilation' || mode === 'beauty') {
-                pregnancyCheck.classList.remove('hidden');
-            } else {
-                pregnancyCheck.classList.add('hidden');
-            }
-        }
-
-        // 提交表單
-        function submitForm(event) {
-            event.preventDefault(); 
-            
-            if (!currentMode) {
-                alert('請先選擇預約項目！');
-                return;
-            }
-
-            // 收集表單資料
-            const name = document.getElementById('name').value.trim();
-            const phone = document.getElementById('phone').value.trim();
-            const dateTime = document.getElementById('date_time').value.trim();
-            const service = document.querySelector('[name="service"]').value.trim();
-            const notes = document.getElementById('notes').value.trim();
-            const isPregnant = document.getElementById('is_pregnant').checked ? "是" : "否";
-            
-            // 建立訊息內容
-            let message = `【沐林&沐靈 美學工作室 - 預約單】\n`;
-            message += `---------------------------------\n`;
-            message += `✅ 預約類型: ${(currentMode === 'depilation' ? '熱蠟除毛' : '美學項目')}\n`;
-            message += `👤 姓名: ${name}\n`;
-            message += `📞 電話: ${phone}\n`;
-            message += `🗓️ 預約時段 (多選): ${dateTime}\n`;
-            message += `🌟 施作項目/需求: ${service}\n`;
-
-            if (currentMode === 'depilation' || currentMode === 'beauty') {
-                 message += `🤰 孕媽咪: ${isPregnant}\n`;
-            }
-            
-            if (notes) {
+        <div id="message-modal" class="modal hidden">
+            <div class="modal-content">
+                <h3 id="modal-title" style="font-size: 1.25rem; font-weight: 700; margin-bottom: 1rem; color: var(--color-primary);">訊息已生成</h3>
+                <p id="modal-content-text" style="margin-bottom: 1rem; color: #4b5563;">
+                    請點擊下方按鈕<strong style="color: var(--color-primary);">一鍵複製</strong>，並手動貼上發送至 Line 官方帳號。
+                </p>
+                <!-- 顯示生成的訊息 -->
+                <textarea id="message-text-area" rows="8" readonly style="width: 100%; border: 1px solid #ccc; padding: 0.5rem; border-radius: 0.5rem; font-size: 0.875rem; margin-bottom: 1rem;"></textarea>
+                
+                <!-- 新增複製按鈕 -->
+                <button onclick="copyMessage()" class="btn-primary" style="width: 100%; padding: 0.5rem 1re
